RESOLVED FIXED268837
Crash at WebKit::WebExtensionContext::extensionCanAccessWebPage
https://bugs.webkit.org/show_bug.cgi?id=268837
Summary Crash at WebKit::WebExtensionContext::extensionCanAccessWebPage
Kiara Rose
Reported 2024-02-06 10:25:19 PST
Crash at WebKit::WebExtensionContext::extensionCanAccessWebPage
Attachments
Radar WebKit Bug Importer
Comment 1 2024-02-06 10:25:38 PST
Kiara Rose
Comment 2 2024-02-06 10:30:26 PST
EWS
Comment 3 2024-02-06 11:26:08 PST
Committed 274161@main (6ada695111e8): <https://commits.webkit.org/274161@main> Reviewed commits have been landed. Closing PR #23933 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.