Cherry-pick 6ada695111e8. rdar://122396440

Crash at WebKit::WebExtensionContext::extensionCanAccessWebPage
    https://bugs.webkit.org/show_bug.cgi?id=268837
    rdar://122396440

    Reviewed by Brian Weinstein.

    As seen in https://webkit.org/b/268767, it's likely that the page is being deallocated
    and closed by the time the callback for storage is called and so the tab for the page is
    not found. Instead of calling the RELEASE_ASSERT_NOT_REACHED() if the extension doesn't
    have access to the tab, return false and just log an error.

    Add an ASSERT_NOT_REACHED() so we can at least keep track of how often this case is hit.

    * Source/WebKit/UIProcess/Extensions/Cocoa/WebExtensionContextCocoa.mm:
    (WebKit::WebExtensionContext::extensionCanAccessWebPage):

    Canonical link: https://commits.webkit.org/274161@main

Canonical link: https://commits.webkit.org/274066.6@safari-7619.1.3-branch